Fixed resolution reduction and channelling fraction code incorrectly using reduced Euler matrices.

--- a/config.ini
+++ b/config.ini
@@ -10,5 +10,8 @@ unindexed_phase_id = 0
 generic_bcc_phase_id = 4294967294
 generic_fcc_phase_id = 4294967295
 
+[resolution_reduction]
+scaling_tolerance = 0.999
+
 [dislocation_density]
 corrective_factor = 3.6
