Improved config parameter management.

--- a/config.ini
+++ b/config.ini
@@ -5,16 +5,20 @@ channelling_cache_dir = channelling_cache
 analysis_output_dir = analyses
 map_output_dir = maps
 
-[phases]
-unindexed_phase_id = 0
-generic_bcc_phase_id = 4294967294
-generic_fcc_phase_id = 4294967295
-
 [resolution_reduction]
+reduction_factor = 1
 scaling_tolerance = 0.999
 
 [dislocation_density]
+pixel_size = 0.808
 corrective_factor = 3.6
 
+[channelling_fraction]
+beam_atomic_number = 31
+beam_energy = 30000.0
+beam_tilt = 5.0
+
 [orientation_clustering]
+neighbour_threshold = 20
+neighbourhood_radius = 5.0
 use_cuda = true
