Moved management of algorithm parameters from parameter groups to config object.

--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,13 @@ channelling_cache_dir = channelling_cache
 analysis_output_dir = analyses
 map_output_dir = maps
 
+[analysis]
+reduce_resolution = false
+compute_dislocation_densities = true
+compute_channelling_fractions = true
+compute_orientation_clusters = true
+use_cuda = true
+
 [resolution_reduction]
 reduction_factor = 1
 scaling_tolerance = 0.999
@@ -21,4 +28,3 @@ beam_tilt = 5.0
 [orientation_clustering]
 neighbour_threshold = 20
 neighbourhood_radius = 5.0
-use_cuda = true
