Moved Euler axis set from scan parameters to config.

--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,9 @@ channelling_cache_dir = channelling_cache
 analysis_output_dir = analyses
 map_output_dir = maps
 
+[data]
+euler_axis_set = zxz
+
 [analysis]
 reduce_resolution = false
 compute_dislocation_densities = true
