Added option to upscale outputted map images.

--- a/config.ini
+++ b/config.ini
@@ -16,6 +16,9 @@ compute_channelling_fractions = true
 compute_orientation_clusters = true
 use_cuda = true
 
+[maps]
+upscale_factor = 4
+
 [resolution_reduction]
 reduction_factor = 1
 scaling_tolerance = 0.999
