Replaced materials file with phase cache.

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [project]
 ebsd_data_dir = data
 materials_file = example_data/materials.csv
-channelling_cache_dir = channelling_cache
+cache_dir = .cache
 analysis_output_dir = analyses
 map_output_dir = maps
 
