Added seeded random source for channelling fraction generation.

--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,7 @@ compute_dislocation_densities = true
 compute_channelling_fractions = true
 compute_orientation_clusters = true
 use_cuda = true
+random_seed = 0
 
 [maps]
 upscale_factor = 4
