--- a/test/config/2205031525.ini
+++ b/test/config/2205031525.ini
@@ -13,6 +13,7 @@ reduce_resolution = false
 compute_dislocation_densities = true
 compute_channelling_fractions = true
 compute_orientation_clusters = true
+use_cache = true
 use_cuda = true
 random_seed = 0
 
