Moved phase data out of cache directory.

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,9 @@
 [project]
-ebsd_data_dir = data
+ebsd_data_dir = data/ebsd
+phase_data_dir = data/phase
+analysis_output_dir = output/analyses
+map_output_dir = output/maps
 cache_dir = .cache
-analysis_output_dir = analyses
-map_output_dir = maps
 
 [data]
 euler_axis_set = zxz
