--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,9 @@
 [project]
-ebsd_data_dir = data
+ebsd_data_dir = data/ebsd
+phase_data_dir = data/phase
+analysis_output_dir = output/analyses
+map_output_dir = output/maps
 cache_dir = .cache
-analysis_output_dir = analyses
-map_output_dir = maps
 
 [data]
 euler_axis_set = zxz
@@ -13,7 +14,9 @@ reduce_resolution = false
 compute_dislocation_densities = true
 compute_channelling_fractions = true
 compute_orientation_clusters = true
+use_cache = true
 use_cuda = true
+random_seed = 0
 
 [maps]
 upscale_factor = 4
