--- a/test/config/2205031525.ini
+++ b/test/config/2205031525.ini
@@ -4,6 +4,7 @@ phase_data_dir = data/phase
 analysis_output_dir = output/analyses
 map_output_dir = output/maps
 cache_dir = .cache
+phase_database_path = phase_database.xml
 
 [data]
 euler_axis_set = zxz
