Moved test data and code, and added associated config entries.

--- a/config.ini
+++ b/config.ini
@@ -37,3 +37,9 @@ beam_tilt = 5.0
 [orientation_clustering]
 neighbour_threshold = 20
 neighbourhood_radius = 5.0
+
+[tests]
+ebsd_data_dir = tests/data
+control_analysis_dir = tests/analyses
+control_map_dir = tests/maps
+config_dir = tests/config
