--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ebsd-utils"
-version = "1.0b4"
+version = "1.0"
 description = "Utilities for processing EBSD data"
 readme = "README.md"
 requires-python = ">= 3.12"
@@ -14,7 +14,7 @@ authors = [
     {name = "Dr G. Hobler", email = "gerhard.hobler@tuwien.ac.at"},
 ]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Environment :: Console",
     "Environment :: GPU :: NVIDIA CUDA",
     "Intended Audience :: Science/Research",
